feat: implement service-wide security configuration using header-based authentication and add core service logic and global exception handling